Added real-time tally % calculation on order form.

--- a/Thermory.Web/Views/Shared/Order/_LumberLineItemForm.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_LumberLineItemForm.cshtml
@@ -34,6 +34,7 @@
         {
             var linearFeetId = string.Format("linearFeet{0}", lumberType.Id);
             var squareFeetId = string.Format("squareFeet{0}", lumberType.Id);
+            var orderLinearFeet = 0.0;
             @Html.Raw(blankRow)
             <tr>
                 <td colspan="2" class="productType productTypeHeading"><div class="headingWidth" title="@lumberType.Name">@lumberType.Name</div></td>
@@ -52,34 +53,55 @@
             </tr>
             <tr>
                 <td colspan="2" class="productType productTypeStatistic" style="vertical-align: middle;"><div class="headingWidth" title="Order Quantity">Order Quantity</div></td>
-                @{
-                    var orderLinearFeet = 0.0;
-                    foreach (var length in millimeterLengths.OrderBy(l => l))
-                    {
-                        <td class="productType subCategoryCellPadding subCategoryLength" style="border-top: none;">
-                            <div class="form-group">
-                                @{
-                                    var productForLength = lumberType.LumberProducts.SingleOrDefault(p => p.LengthInMillimeters == length);
-                                    if (productForLength != null)
-                                    {
-                                        var lineItem = Model.LumberLineItems == null ? null : Model.LumberLineItems.SingleOrDefault(li => li.LumberProductId == productForLength.Id);
-                                        var orderQuantity = lineItem == null ? 0 : lineItem.Quantity;
-                                        var lineItemId = lineItem == null ? Guid.Empty : lineItem.Id;
-                                        orderLinearFeet += LumberCalculations.GetLinearFeet(orderQuantity, productForLength.LengthInInches);
-                                        <input type="text" name="lumberQty" id="@lineItemId" productid="@productForLength.Id" lumbertypeid="@lumberType.Id" lengthinmillimeters="@length" lengthininches="@productForLength.LengthInInches" class="form-control" maxlength="6" pattern="[0-9]*" value="@orderQuantity" onchange="lumberProductQuantityChanged('@lumberType.Id', '@subCategory.WidthInInches', '@linearFeetId', '@squareFeetId', @subCategory.BundleSize);" />
-                                    }
-                                    else
-                                    {
-                                        <div class="noLength">N/A</div>
-                                    }
-                                }
-                            </div>
-                        </td>
-                    }
+                @foreach (var length in millimeterLengths.OrderBy(l => l))
+                {
+                    var productForLength = lumberType.LumberProducts.SingleOrDefault(p => p.LengthInMillimeters == length);
+                    <td class="productType subCategoryCellPadding subCategoryLength" style="border-top: none;">
+                        <div class="form-group">
+                            @if (productForLength != null)
+                            {
+                                var lineItem = Model.LumberLineItems == null ? null : Model.LumberLineItems.SingleOrDefault(li => li.LumberProductId == productForLength.Id);
+                                var orderQuantity = lineItem == null ? 0 : lineItem.Quantity;
+                                var lineItemId = lineItem == null ? Guid.Empty : lineItem.Id;
+                                orderLinearFeet += LumberCalculations.GetLinearFeet(orderQuantity, productForLength.LengthInInches);
+                                <input type="text" name="lumberQty" id="@lineItemId" productid="@productForLength.Id" lumbertypeid="@lumberType.Id" lengthinmillimeters="@length" lengthininches="@productForLength.LengthInInches" class="form-control" maxlength="6" pattern="[0-9]*" value="@orderQuantity" onchange="lumberProductQuantityChanged('@lumberType.Id', '@subCategory.WidthInInches', '@linearFeetId', '@squareFeetId', @subCategory.BundleSize);" />
+                            }
+                            else
+                            {
+                                <div class="noLength">N/A</div>
+                            }
+                        </div>
+                    </td>
                 }
                 <td id="@linearFeetId" class="totalLinearFeet" style="padding-top: 16px; border-top: none;">@orderLinearFeet</td>
                 <td id="@squareFeetId" class="totalSquareFeet" style="padding-top: 16px; border-top: none;">@LumberCalculations.GetSquareFeet(orderLinearFeet, subCategory.WidthInInches)</td>
             </tr>
+            <!-- Order Qty Row -->
+            <tr>
+                <td colspan="2" class="productType productTypeStatistic" style="vertical-align: middle; border-top: none;"><div class="headingWidth" title="Order Tally %">Order Tally %</div></td>
+                @foreach (var length in millimeterLengths.OrderBy(l => l))
+                {
+                    var productForLength = lumberType.LumberProducts.SingleOrDefault(p => p.LengthInMillimeters == length);
+                    <td class="productType subCategoryCellPadding subCategoryLength" style="border-top: none;">
+                        <div class="form-group">
+                            @if (productForLength != null)
+                            {
+                                var lineItem = Model.LumberLineItems == null ? null : Model.LumberLineItems.SingleOrDefault(li => li.LumberProductId == productForLength.Id);
+                                var tallyPercent = lineItem == null ? 0 : lineItem.TallyPercentage;
+                                var id = string.Format("orderTally{0}{1}", productForLength.LumberTypeId, length);
+                                <div class="noLength" id="@id">@tallyPercent%</div>
+                            }
+                            else
+                            {
+                                <div class="noLength">0%</div>
+                            }
+                        </div>
+                    </td>
+                }
+                <td id="@linearFeetId" class="totalLinearFeet" style="padding-top: 16px; border-top: none;">&nbsp;</td>
+                <td id="@squareFeetId" class="totalSquareFeet" style="padding-top: 16px; border-top: none;">&nbsp;</td>
+            </tr>
+            <!-- Order Tally % Row-->
             <tr>
                 <td colspan="2" class="productType productTypeStatistic" style="vertical-align: middle;">Packs</td>
                 @foreach (var length in millimeterLengths.OrderBy(l => l))
@@ -134,12 +156,12 @@
 
 <script>
     function lumberProductQuantityChanged(lumberTypeId, width, linearFeetId, squareFeetId, bundleSize) {
-        var linearFeet = 0;
+        var totalLinearFeet = 0;
         $('input[lumberTypeId="' + lumberTypeId + '"]').each(function (key, value) {
             var pieces = parseInt($(this).val());
             var lengthInMillimeters = $(this).attr('lengthInMillimeters');
             var lengthInInches = $(this).attr('lengthInInches');
-            linearFeet += calculateLinearFeet(pieces, lengthInInches);
+            totalLinearFeet += calculateLinearFeet(pieces, lengthInInches);
             if ('@Model.ValidateQuantityOnHand' == 'True') {
                 var quantityOnHandId = 'quantityOnHand' + lumberTypeId + lengthInMillimeters;
                 var qtyOnHand = parseInt($('#' + quantityOnHandId).val());
@@ -151,12 +173,17 @@
             }
             $('#packs' + lumberTypeId + lengthInMillimeters).html(getPackHtml(pieces, bundleSize));
         });
-        $('#' + linearFeetId).html(linearFeet);
-        var squareFeet = calculateSquareFeet(linearFeet, width);
+
+        updateTallyPercent(lumberTypeId, totalLinearFeet);
+        $('#' + linearFeetId).html(totalLinearFeet);
+        var squareFeet = calculateSquareFeet(totalLinearFeet, width);
         $('#' + squareFeetId).html(squareFeet);
     }
 
     function calculateLinearFeet(pieces, length) {
+        if (isNaN(pieces)) {
+            return 0;
+        }
         var linearFeet = Math.round(pieces * length / 12);
         return linearFeet;
     }
@@ -166,15 +193,33 @@
         return squareFeet;
     }
 
+    function updateTallyPercent(lumberTypeId, totalLinearFeet) {
+        $('input[lumberTypeId="' + lumberTypeId + '"]').each(function (key, value) {
+            var lengthInMillimeters = $(this).attr('lengthInMillimeters');
+            var id = '#orderTally' + lumberTypeId + lengthInMillimeters;
+            var pieces = parseInt($(this).val());
+
+            if (pieces == 0 || isNaN(pieces)) {
+                $(id).html('0%');
+                return;
+            }
+            var lengthInInches = $(this).attr('lengthInInches');
+            var linearFeet = calculateLinearFeet(pieces, lengthInInches);
+            var tallyPercent = Math.round(linearFeet / totalLinearFeet * 100);
+            $(id).html(tallyPercent + '%');
+        });
+    }
+
     function getPackHtml(pieces, bundleSize) {
         if (bundleSize == 0) { return "N/A"; }
+        if (pieces == 0 || isNaN(pieces)) return 0;
 
         var wholePacks = Math.floor(pieces / bundleSize);
         var remainder = pieces % bundleSize;
         if (wholePacks == 0 && remainder != 0) {
             wholePacks = '';
         }
-        
+
         if (remainder != 0) {
             var reducedValues = reduceFraction(remainder, bundleSize);
             remainder = reducedValues[0];
